--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-  email = matheus.furlanetto@la.logicalis.com
+  email = matfurla79@gmail.com
   name = Matheus Furlanetto
 [credential]
   helper = store
