--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -12,29 +12,82 @@ remember_window_size    no
 initial_window_width    640
 initial_window_height   500
 
-foreground #eeffff
-background #1a1a1a
+background           #1d2021
+foreground           #ebdbb2
+selection_background #ebdbb2
+selection_foreground #928374
 
-color0     #212121
-color8     #212121
+cursor               #ebdbb2
+cursor_text_color    #1d2021
 
-color1     #f07178
-color9     #f07178
+url_color            #fe8019
 
-color2     #c3e88d
-color10    #c3e88d
+# black
+color0  #282828
+color8  #928374
 
-color3     #ffcb6b
-color11    #ffcb6b
+# red
+color1  #cc241d
+color9  #fb4934
 
-color4     #82aaff
-color12    #82aaff
+# green
+color2  #98971a
+color10 #b8bb26
 
-color5     #c792ea
-color13    #c792ea
+# yellow
+color3  #d79921
+color11 #fabd2f
 
-color6     #89ddff
-color14    #89ddff
+# blue
+color4  #458588
+color12 #83a598
 
-color7     #eeffff
-color15    #eeffff
+# magenta
+color5  #b16286
+color13 #d3869b
+
+# cyan
+color6  #689d6a
+color14 #8ec07c
+
+# white
+color7  #a89984
+color15 #ebdbb2
+
+# extended 256-color palette
+color24  #076678
+color66  #458588
+color72  #689d6a
+color88  #9d0006
+color96  #8f3f71
+color100 #79740e
+color106 #98971a
+color108 #8ec07c
+color109 #83a598
+color124 #cc241d
+color130 #af3a03
+color132 #b16286
+color136 #b57614
+color142 #b8bb26
+color166 #d65d0e
+color167 #fb4934
+color172 #d79921
+color175 #d3869b
+color208 #fe8019
+color214 #fabd2f
+color223 #ebdbb2
+color228 #f2e5bc
+color229 #fbf1c7
+color230 #f9f5d7
+color234 #1d2021
+color235 #282828
+color236 #32302f
+color237 #3c3836
+color239 #504945
+color241 #665c54
+color243 #7c6f64
+color244 #928374
+color245 #928374
+color246 #a89984
+color248 #bdae93
+color250 #d5c4a1
